--- a/package.json
+++ b/package.json
@@ -3,17 +3,33 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "serve": "vite preview"
+    "build": "npm run lint:prod && tsc && vite build",
+    "serve": "vite preview",
+    "lint": "eslint ./src/ --fix --ext .js,.jsx,.ts,.tsx",
+    "lint:prod": "eslint ./src/ --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@vitejs/plugin-react-refresh": "^1.3.2",
+    "autoprefixer": "^10.2.5",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "postcss": "^8.2.9",
+    "prettier": "^2.2.1",
+    "tailwindcss": "^2.1.1",
     "typescript": "^4.2.3",
     "vite": "^2.1.5"
   }
