--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint:prod": "eslint ./src/ --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
+    "axios": "^0.21.1",
+    "clsx": "^1.1.1",
+    "history": "^5.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^6.0.0-beta.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
@@ -29,6 +35,9 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.2.9",
     "prettier": "^2.2.1",
+    "sass": "^1.32.8",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
     "tailwindcss": "^2.1.1",
     "typescript": "^4.2.3",
     "vite": "^2.1.5"
